hack fix for card sizing and content overflow. Still not scrolling

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -115,7 +115,7 @@ body {
 
 .bigCard .photo {
   box-sizing: border-box;
-  min-height: 150px;
+  /*min-height: 150px;*/
   /*background-image: url('https://irs2.4sqi.net/img/general/400x400/713202_jNDoqS8QAXWtSHOVCRVjFDASsmqLdUSx1Yy5dPuFPQQ.jpg');*/
   /*background-color: steelblue;*/
   background-size: cover;
@@ -136,6 +136,7 @@ body {
   line-height: 3em;
   font-size: 1.3em;
   border: 2px solid #163477;
+  z-index: 1000;
 }
 
 .bigCard .info {
@@ -143,7 +144,9 @@ body {
   padding: 20px;
   font-size: 14px;
   line-height: 1.2em;
-  height: 300px;
+  /*height: 48vmax;*/
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .bigCard .rating {
